# printagent

./: .codexignore  .env.example  .gitignore  .pyre_configuration  AGENTS.md  ENDPOINT.md  GEMINI.md  README.md  RTK.md  TEST_CASE.md  TEST_CASE_AGENT_VI.md  build_agent_exe.ps1  check_final.py  check_locks.py  check_markers.py  check_progress_detail.py  check_remote_status.py  check_versions.py  config.yaml  debug_service.py  deploy_nginx.py  execute_deploy.py  explore_portal.py  explore_portal_safe.py  finalize_vps.py  fix_nginx_cert.py  fix_service.py  force_deploy_fix.py  init_db.py  kill_and_run_certbot.py  list_accounts_v2.py  list_certbot_accounts.py  packed_log.txt  packed_missing.txt  pyproject.toml  pyrightconfig.json  remote_setup.sh  requirements.txt  run_certbot.py  run_remote_setup.py  (+9 more)
agent/: config.py  db.py  main.py  models.py  web.py
app/: __init__.py  config.py  db.py  main.py  models.py  web.py
app-gox/: .env.development  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: .env.example  PUBLIC_API.md  README.md  __init__.py  app.py  config.py  db.py  google_drive_sync.py  init_db.py  models.py  serializers.py  smoke_backend.db  start.bat  utils.py
backup/: config.yaml
binz/: 03097b3b7092b581e4a09196735c38a8-v2.js  4a683d805a88c00ef37ef11cac0163c5-v2.js  55b134e4c1e16f5ccdd5c5ed98a09a7b-v2.js  7835382f7dea7c6458d374a3f0937785-v2.js  7c0d2bc9b260b5b4892a1b3059b7ec61-v2.js  7c750419b36e4c702f6dff02d2f5701b-v2.js  8274b12b0eeb1eb8f81799be10c44eb7-v2.js  9f22128e904ef304c5b15735484fb5eb-v2.js  (+11 more)
(+319 files in other folders)
